--- a/report/root.tex
+++ b/report/root.tex
@@ -76,7 +76,7 @@ On Detection of Users and Content of Interest on Reddit*
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{abstract}
-Fill in abstract.
+  The online social networking platform Reddit has gained large popularity over the last decade. The news aggregation and discussion site is organized into subreddits whose existence is focussed on a given topic: from political rambling to serious discussion of novel research to homework help. Content on these subreddits is sorted using a voting scheme: users can either upvote or downvote a given submission. It is, however, not easy to identify engaging content or engaged users over long spans of time. I propose a systematic framework using the Katz centrality measure to identify content that was most engaging over a large period of time that does not rely on simply looking at upvotes. The technique both ranks users for their engagement as well as the content that received the most engagement. I also investigate using spectral clustering to reason about behaviour on subreddits.
 \end{abstract}
 
 
