--- a/report/root.tex
+++ b/report/root.tex
@@ -22,8 +22,10 @@
 
 \IEEEoverridecommandlockouts
 \overrideIEEEmargins
-%\pdfobjcompresslevel=0
-%\pdfminorversion=4
+\pdfcompresslevel=9
+\pdfobjcompresslevel=0
+\pdfminorversion=7
+
 
 % See the \addtolength command later in the file to balance the column lengths
 % on the last page of the document
