Minor fixes to slides.
Modifications:
 - Removed unnecessary line.
 - Sassy summary.

--- a/report/slide_deck.tex
+++ b/report/slide_deck.tex
@@ -160,8 +160,6 @@
     \item<3->{Deleted content and users are not interesting nor generate interesting content and do not affect other users in a meaningful way.}
     \item<4->{Active engagement of users (through comments or submissions) is a good measure of interest.}
   \end{enumerate}
-
-  Data for: November 2017 --- February 2018
 \end{frame}
 \begin{frame}[fragile]
   \frametitle{Structuring the Graph}
@@ -303,10 +301,11 @@
 \section{Summary}
 \begin{frame}
   \frametitle{Summary}
+  \framesubtitle{What did we learn?}
   \begin{itemize}
-    \item<1->{Reddit is cool!}
+    \item<1->{Infinity is odd.}
     \item<2->{Users totally read what they react to.}
-    \item<3->{Talked about how Dave Tompkins is awesome.}
+    \item<3->{Dave Tompkins is awesome.}
     \item<4->{Obligatory reference to Trump.}
     \item<5->{Importance of investing expertise.}
   \end{itemize}
